[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
addopts =
    --cov pyramid_bugsnag
    --cov-report term
    --cov-report term-missing

[pylama]
paths = pyramid_bugsnag tests setup.py
format = pycodestyle
linters = mccabe,pycodestyle,pyflakes

[pylama:pycodestyle]
max_line_length = 120

[pylama:mccabe]
max-complexity = 2

[mypy]
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
disallow_subclassing_any = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True
strict_optional = True

[mypy-bugsnag.*]
ignore_missing_imports = True

[mypy-pyramid.*]
ignore_missing_imports = True

[mypy-httpretty.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-_pytest.*]
ignore_missing_imports = True

[mypy-webtest.*]
ignore_missing_imports = True
